[gd_scene load_steps=5 format=3 uid="uid://b51jw4pmbjkqw"]

[ext_resource type="Script" path="res://escenas/main_menu_scene/main_menu_scene.gd" id="1_lww0e"]
[ext_resource type="Theme" uid="uid://dwocoy3cdqw1r" path="res://escenas/theme.tres" id="1_vht6t"]
[ext_resource type="FontFile" uid="uid://bvxgms0k75jgt" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_78qmy"]
[ext_resource type="AudioStream" uid="uid://dwlc7qgwpbbu7" path="res://assets/sound/sfx/coin.wav" id="4_ehr8n"]

[node name="MainMenuScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lww0e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -90.0
offset_right = 236.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_vht6t")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_78qmy")
theme_override_font_sizes/font_size = 32
text = "The endless deck"

[node name="Exit" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -50.0
offset_right = 53.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../Start")
focus_neighbor_top = NodePath("../Start")
focus_neighbor_right = NodePath("../Store")
theme = ExtResource("1_vht6t")
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
text = "EXIT"

[node name="Start" type="Button" parent="CanvasLayer"]
offset_left = 138.0
offset_top = 194.0
offset_right = 244.0
offset_bottom = 225.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_right = NodePath("../Store")
focus_neighbor_bottom = NodePath("../Exit")
theme = ExtResource("1_vht6t")
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
text = "START"

[node name="Store" type="Button" parent="CanvasLayer"]
offset_left = 292.0
offset_top = 194.0
offset_right = 398.0
offset_bottom = 225.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Exit")
theme = ExtResource("1_vht6t")
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
text = "STORE"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ehr8n")
volume_db = -20.0
pitch_scale = 1.6

[connection signal="focus_exited" from="CanvasLayer/Exit" to="." method="_on_exit_focus_exited"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_exit_pressed"]
[connection signal="focus_exited" from="CanvasLayer/Start" to="." method="_on_start_focus_exited"]
[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Store" to="." method="_on_store_pressed"]
